# ityfuzz

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CNAME  Cargo.toml  Dockerfile  FUNDING.json  LICENSE  Makefile.toml  README.md  README_CN.md  backtesting.md  ci.py  env_vars.sh  euler.json  foundry_test.hbs  integration-test.md  integration_test.py  ityfuzzup  offchain_config_1434_0_1701112172878_63428.json  onchain_tests.txt  onchain_tests_new.txt  res_3913_exp_0.txt  res_AES_exp_0.txt  res_AIS_exp_0.txt  res_APIG_exp_0.txt  res_ATK_exp_1.txt  res_ATK_exp_2.txt  res_ATK_exp_3.txt  res_ApeDAO_exp.txt  res_ApeDAO_exp_0.txt  res_Astrid_exp_0.txt  res_Audius_exp_0.txt  res_Audius_exp_1.txt  res_Audius_exp_2.txt  res_BEGO_exp.txt  res_BFCToken_exp_0.txt  res_BGLD_exp_0.txt  res_BH_exp_0.txt  (+136 more)
.github/: RELEASE_FAILURE_ISSUE_TEMPLATE.md  changelog.json
.github/scripts/: create-tag.js  move-tag.js  prune-prereleases.js
.github/workflows/: build.yml  docker-arm.yml  docker-x86.yml  docker.yml  release.yml  rust.yml
benches/: ityfuzz.rs
benchmarks/: run_smartian_benchmarks.py
cli/: .gitignore  Cargo.toml  Makefile.toml  cargo-make.toml
cli/src/: evm.rs  licensing.rs  main.rs  move.rs
cli/work_dir/: vulnerabilities
core/: Cargo.toml
core/src/: cache.rs  const.rs  indexed_corpus.rs  oracle.rs  state_input.rs
demo/: test.sol  test_sol_main.abi  x.sol
integration_results/: integration_result.txt  res_AUR_exp.txt  res_Annex_exp.txt  res_ApeDAO_exp.txt  res_Axioma_exp.txt  res_BEGO_exp.txt  res_BIGFI_exp.txt  res_CS_exp.txt  res_Carrot_exp.txt  res_DYNA_exp.txt  res_EAC_exp.txt  res_GPT_exp.txt  res_GSS_exp.txt  res_HEALTH_exp.txt  res_MBC_ZZSH_exp.txt  res_MintoFinance_exp.txt  res_Novo_exp.txt  res_OLIFE_exp.txt  res_PLTD_exp.txt  res_RFB_exp.txt  res_ROI_exp.txt  res_SEAMAN_exp.txt  res_SELLC03_exp.txt  res_SellToken_exp.txt  res_Shadowfi_exp.txt  res_THB_exp.txt  res_VerilogCTF.txt  res_Yyds_exp.txt  res_cftoken_exp.txt
integration_results_new/: res_0vix_exp_0.txt  res_3913_exp_0.txt  res_3913_exp_1.txt  res_AES_exp_0.txt  res_AIS_exp_0.txt  res_ALP_exp_0.txt  res_APC_exp_0.txt  res_APC_exp_1.txt  res_APIG_exp_0.txt  res_ARA_exp_0.txt  res_ARK_exp_0.txt  res_ATK_exp_0.txt  res_ATK_exp_1.txt  res_ATK_exp_2.txt  res_ATK_exp_3.txt  res_ATM_exp_0.txt  res_AUR_exp.txt  res_AUR_exp_0.txt  res_AUR_exp_1.txt  res_AffineDeFi_exp_0.txt  res_Allbridge_exp2_0.txt  res_Allbridge_exp_0.txt  res_Annex_exp_0.txt  res_ApeDAO_exp.txt  res_ApeDAO_exp_0.txt  res_Audius_exp_3.txt  res_Axioma_exp.txt  res_Axioma_exp_0.txt  res_BBOX_exp_0.txt  res_BDEX_exp_0.txt  res_BEARNDAO_exp_0.txt  res_BEGO_exp.txt  res_BEGO_exp_0.txt  res_BEVO_exp_0.txt  res_BFCToken_exp_0.txt  res_BGLD_exp_0.txt  res_BH_exp_0.txt  res_BIGFI_exp.txt  res_BIGFI_exp_0.txt  res_BNO_exp_0.txt  (+252 more)
ityfuzzup/: install  ityfuzzup
move_resources/sui/: address.mv  bcs.mv  bls12381.mv  coin.mv  dynamic_field.mv  ecdsa_k1.mv  hex.mv  kiosk.mv  object.mv  package.mv  prover.mv  table_vec.mv  transfer.mv  transfer_policy.mv  tx_context.mv  vec_set.mv
onchain_scripts/: debug_file_generator.py  evaluate.py  immunefi.py  proxy.py  target.txt
onchain_scripts/proxy/: Dockerfile  main.py  requirements.txt
proxies/: etherscan.py  proxy.py  requirements.txt
proxy/: main.py  requirements.txt
server/: app.js  package-lock.json  package.json
solidity_utils/: lib.sol
src/: README.md  abi.rs  build.rs  cache.rs  concolic_host.rs  config.rs  const.rs  contract_utils.rs  corpus.rs  evm.rs  executor.rs  feedback.rs  fuzzer.rs  indexed_corpus.rs  infant_feedback.rs  infant_state_stage.rs  input.rs  lib.rs  logger.rs  main.rs  middleware.rs  minimizer.rs  mutation_utils.rs  mutator.rs  oracle.rs  power_sched.rs  rand.rs  rand_utils.rs  scheduler.rs  state.rs  state_input.rs  telemetry.rs  test_generator.rs  tracer.rs  types.rs  utils.rs
src/concolic/: concolic_host.rs  mod.rs
src/evm/: README.md  abi.rs  bytecode_analyzer.rs  bytecode_iterator.rs  config.rs  contract_utils.rs  corpus_initializer.rs  cov_stage.rs  feedbacks.rs  foundry_test_generator.rs  host.rs  input.rs  middleware.rs  minimizer.rs  mod.rs  mutation_utils.rs  mutator.rs  oracle.rs  scheduler.rs  solution.rs  types.rs  utils.rs  vm.rs
src/fuzzers/: basic_fuzzer.rs  cmp_fuzzer.rs  df_fuzzer.rs  dummyfuzzer.rs  evm_fuzzer.rs  mod.rs  move_fuzzer.rs
src/generic_vm/: mod.rs  vm_executor.rs  vm_state.rs
src/move/: config.rs  corpus_initializer.rs  input.rs  input_printer.rs  minimizer.rs  mod.rs  move_test_generator.rs  movevm.rs  mutator.rs  scheduler.rs  types.rs  vm_state.rs
src/onchain/: endpoints.rs  flashloan.rs  mod.rs  onchain.rs
tests/abi-test/: test.sol
tests/complex-condition/: test.sol
tests/complex-state/: main.sol
tests/evm_real_balance/: contract3.abi  test_real_balance.sol
tests/flashloan/: test.sol
tests/init_cryo_corpus/: ethereum__traces__18000000_to_18000000.parquet  ethereum__transactions__18000000_to_18000009.parquet
tests/multi-contract/: X.address  test.sol
tests/olympus-simple/: test.sol
tests/presets/: DefiHacksPresets.json
tests/reentrancy/: main.sol
tests/return/: test.sol
tests/sbe@constant-product-amm-addLiquidity1/: CPAMM.sol
tests/sbe@constant-product-amm-addLiquidity2/: CPAMM.sol
tests/sbe@constant-product-amm-addLiquidity3/: CPAMM.sol
tests/sbe@constant-product-amm-burn/: CPAMM.sol
tests/sbe@constant-product-amm-removeLiquidity/: CPAMM.sol
tests/sbe@discrete-staking-rewards-claim/: DiscreteStakingRewards.sol
tests/sbe@stable-swap-amm-addLiquidity1/: StableSwap.sol
tests/sbe@stable-swap-amm-addLiquidity6/: StableSwap.sol
tests/sbe@stable-swap-amm-addLiquidity7/: StableSwap.sol
tests/sbe@stable-swap-amm-addLiquidity8/: StableSwap.sol
tests/sbe@stable-swap-amm-addLiquidity9/: StableSwap.sol
tests/sbe@stable-swap-amm-removeLiquidityOneToken/: StableSwap.sol
tests/sbe@staking-rewards-stake/: StakingRewards.sol
tests/scribble/: test.flat.sol
tests/verilog-2/: Bounty.sol  README.md  (+2 more)
ui/: backend.py  requirements.txt  start.sh  wrapper.py
work_dir/: vulnerabilities
(+225 files in other folders)
