[package]
name = "ityfuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.4.0"

[features]
default = [
    "cmp",
    "dataflow",
    "evm",
    "print_txn_corpus",
    "full_trace",
]
evm = []
cmp = []
dataflow = []
evaluation = []
ondisk_corpus = []
# need to turn off when running DV contracts
deployer_is_attacker = []
print_infant_corpus = []
print_txn_corpus = []
fuzz_static = []
flashloan_v2 = []
real_balance = []
full_trace = []
force_cache = []
use_presets = []
print_logs = []
z3_debug = []
sui_support = [
    "dep:move-binary-format",
    "dep:move-core-types",
    "dep:move-stdlib",
    "dep:move-vm-runtime",
    "dep:move-vm-types",
    "dep:sui-move-natives-latest",
    "dep:sui-protocol-config",
    "dep:sui-types",
]
debug = []
flashloan_debug = []

[dependencies]
bytes = { version = "1.2.1", features = ["serde"] }
retry = "2.0.0"
serde_cbor = "0.11.2"
clap = { version = "4.4.4", features = ["derive"] }
sentry = "0.29.1"
rlp = "0.5.2"
ethers = "2.0.7"

hex = "0.4"
primitive-types = { version = "0.12.1", features = ["rlp", "serde"] }
libafl = "0.11.1"
libafl_bolts = "0.11.1"
rand = "0.8.5"
nix = "0.24"
serde = "1.0.147"
serde_traitobject = "0.2.7"
serde_json = "1.0.73"
z3 = { version = "0.11.2", features = ["static-link-z3"] }
z3-sys = "0.7.1"
glob = "0.3.0"
rust-crypto = "0.2"
itertools = "0.10.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
once_cell = "1.8.0"
permutator = "0.4.3"
either = "1.8.0"
regex = "1"
typetag = "0.2.13"
lazy_static = "1.4.0"
num_cpus = "1.0"

revm = { git = "https://github.com/fuzzland/revm", rev = "91f3a4cc2762d0b45ab88f48faa6a7c39fa84f84", features = [
    "no_gas_measuring",
    "serde",
    "memory_limit",
] }
revm-primitives = { git = "https://github.com/fuzzland/revm", rev = "91f3a4cc2762d0b45ab88f48faa6a7c39fa84f84", features = [
    "no_gas_measuring",
    "serde",
    "memory_limit",
] }
revm-interpreter = { git = "https://github.com/fuzzland/revm", rev = "91f3a4cc2762d0b45ab88f48faa6a7c39fa84f84", features = [
    "no_gas_measuring",
    "serde",
    "memory_limit",
] }
# external fuzzing-based abi decompiler
heimdall_core = { git = "https://github.com/fuzzland/heimdall-rs.git", package = "heimdall-core" }
# heimdall_core relies on an async runtime
tokio = { version = "1.0", features = ["full"] }


move-binary-format = { git = "https://github.com/fuzzland/ityfuzz-sui-fork.git", package = "move-binary-format", optional = true }
move-core-types = { git = "https://github.com/fuzzland/ityfuzz-sui-fork.git", package = "move-core-types", features = [
    "address32",
], optional = true }
move-stdlib = { git = "https://github.com/fuzzland/ityfuzz-sui-fork.git", package = "move-stdlib", optional = true }
move-vm-runtime = { git = "https://github.com/fuzzland/ityfuzz-sui-fork.git", package = "move-vm-runtime", features = [
    "lazy_natives",
], optional = true }
move-vm-types = { git = "https://github.com/fuzzland/ityfuzz-sui-fork.git", package = "move-vm-types", optional = true }
sui-move-natives-latest = { git = "https://github.com/fuzzland/ityfuzz-sui-fork.git", package = "sui-move-natives-latest", optional = true }
sui-protocol-config = { git = "https://github.com/fuzzland/ityfuzz-sui-fork.git", package = "sui-protocol-config", optional = true }
sui-types = { git = "https://github.com/fuzzland/ityfuzz-sui-fork.git", package = "sui-types", optional = true }

# template engine
handlebars = "4.4"
